--- a/src/pages/dashboard/Words.module.scss
+++ b/src/pages/dashboard/Words.module.scss
@@ -10,6 +10,8 @@
   display: flex;
   align-items: center;
 
+  cursor: pointer;
+
   border-radius: 6px;
   padding: 12px;
 
@@ -25,7 +27,7 @@
   }
 
   &:hover {
-    background: rgb(var(--color-back-alt));
+    background: rgb(var(--color-back-alt) / .5);
   }
 
   // [data-toggle] {
@@ -34,10 +36,20 @@
   //   height: 32px;
   // }
 
-  [data-word-label] {
+  [data-label] {
     display: flex;
     align-items: baseline;
     gap: 6px;
+    white-space: nowrap;
+  }
+
+  [data-speaking-icon] {
+    opacity: 0;
+    transition: opacity 100ms;
+
+    &[data-visible=true] {
+      opacity: 1;
+    }
   }
 
   [data-kr] {
@@ -48,9 +60,5 @@
   [data-en] {
     line-height: 1;
     color: rgb(var(--color-front-alt));
-  }
-
-  [data-spacer] {
-    flex: 1;
   }
 }
