--- a/src/pages/dashboard/Words.module.scss
+++ b/src/pages/dashboard/Words.module.scss
@@ -4,6 +4,54 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+
+  [data-skeleton] {
+    display: flex;
+
+    cursor: pointer;
+
+    border-radius: 6px;
+    padding: 12px;
+
+    background: rgb(var(--color-front) / 0.05);
+
+    &,
+    [data-kr],
+    [data-en],
+    [data-toggle] {
+      background: rgb(var(--color-front) / 0.07);
+      animation: skeleton 1.25s cubic-bezier(0.65, 0, 0.35, 1) alternate infinite;
+    }
+
+    [data-label] {
+      display: flex;
+      align-items: flex-end;
+      gap: 6px;
+      white-space: nowrap;
+    }
+
+    [data-kr] {
+      border-radius: 8px;
+      line-height: 1;
+      font-size: 24px;
+      width: 128px;
+      height: 100%;
+    }
+
+    [data-en] {
+      border-radius: 8px;
+      line-height: 1;
+      width: 256px;
+      height: 50%;
+    }
+
+    [data-toggle] {
+      height: 48px;
+      width: 48px;
+      border-radius: 8px;
+    }
+  }
+
 }
 
 .word {
@@ -30,12 +78,6 @@
     background: rgb(var(--color-back-alt) / .5);
   }
 
-  // [data-toggle] {
-  //   align-self: center;
-  //   width: 32px;
-  //   height: 32px;
-  // }
-
   [data-label] {
     display: flex;
     align-items: baseline;
@@ -60,5 +102,17 @@
   [data-en] {
     line-height: 1;
     color: rgb(var(--color-front-alt));
+  }
+}
+
+@keyframes skeleton {
+  0%, 15% {
+    // background-color: rgb(var(--color-front) / 0.05);
+    opacity: 1;
+  }
+  
+  100% {
+    // background-color: rgb(var(--color-front) / 0.1);
+    opacity: 0.6;
   }
 }
