Button + Toggle css modules + misc fixes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,27 +11,75 @@
     /* TODO: border color */
 
     --color-front: 250 250 250;
-    --color-front-alt: 180 180 180;
     --color-back: 10 10 10;
+    --color-front-alt: 180 180 180;
     --color-back-alt: 30 30 30;
-
     --color-error: 242 88 88;
     --color-access: 50 50 255;
+    
+    --color-front-100: rgb(var(--color-front) / 1);
+    --color-front-90: rgb(var(--color-front) / 0.9);
+    --color-front-75: rgb(var(--color-front) / 0.75);
+    --color-front-50: rgb(var(--color-front) / 0.5);
+    --color-front-25: rgb(var(--color-front) / 0.25);
+    --color-front-10: rgb(var(--color-front) / 0.1);
+    --color-front-5: rgb(var(--color-front) / 0.05);
 
-    --spacing-2: 2px;
-    --spacing-4: 4px;
-    --spacing-6: 6px;
-    --spacing-8: 6px;
+    --color-front-alt-100: rgb(var(--color-front-alt) / 1);
+    --color-front-alt-90: rgb(var(--color-front-alt) / 0.9);
+    --color-front-alt-75: rgb(var(--color-front-alt) / 0.75);
+    --color-front-alt-50: rgb(var(--color-front-alt) / 0.5);
+    --color-front-alt-25: rgb(var(--color-front-alt) / 0.25);
+    --color-front-alt-10: rgb(var(--color-front-alt) / 0.1);
+    --color-front-alt-5: rgb(var(--color-front-alt) / 0.05);
+
+    --color-back-100: rgb(var(--color-back) / 1);
+    --color-back-90: rgb(var(--color-back) / 0.9);
+    --color-back-75: rgb(var(--color-back) / 0.75);
+    --color-back-50: rgb(var(--color-back) / 0.5);
+    --color-back-25: rgb(var(--color-back) / 0.25);
+    --color-back-10: rgb(var(--color-back) / 0.1);
+    --color-back-5: rgb(var(--color-back) / 0.05);
+
+    --color-back-alt-100: rgb(var(--color-back-alt) / 1);
+    --color-back-alt-90: rgb(var(--color-back-alt) / 0.9);
+    --color-back-alt-75: rgb(var(--color-back-alt) / 0.75);
+    --color-back-alt-50: rgb(var(--color-back-alt) / 0.5);
+    --color-back-alt-25: rgb(var(--color-back-alt) / 0.25);
+    --color-back-alt-10: rgb(var(--color-back-alt) / 0.1);
+    --color-back-alt-5: rgb(var(--color-back-alt) / 0.05);
+
+    --color-access-100: rgb(var(--color-access) / 1);
+    --color-access-90: rgb(var(--color-access) / 0.9);
+    --color-access-75: rgb(var(--color-access) / 0.75);
+    --color-access-50: rgb(var(--color-access) / 0.5);
+    --color-access-25: rgb(var(--color-access) / 0.25);
+    --color-access-10: rgb(var(--color-access) / 0.1);
+    --color-access-5: rgb(var(--color-access) / 0.05);
+
+    --color-error-100: rgb(var(--color-error) / 1);
+    --color-error-90: rgb(var(--color-error) / 0.9);
+    --color-error-75: rgb(var(--color-error) / 0.75);
+    --color-error-50: rgb(var(--color-error) / 0.5);
+    --color-error-25: rgb(var(--color-error) / 0.25);
+    --color-error-10: rgb(var(--color-error) / 0.1);
+    --color-error-5: rgb(var(--color-error) / 0.05);
+
+    --spacing-sm: 3px;
+    --spacing-md: 6px;
+    --spacing-lg: 12px;
     --spacing-v: var(--spacing);
 
-    --radius-4: 4px;
-    --radius-6: 6px;
-    --radius-8: 8px;
+
     --radius-v: var(--radius);
+    --radius-sm: 3px;
+    --radius-md: 6px;
+    --radius-lg: 12px;
     
     --border: 0.5px solid rgb(var(--color-front) / 0.1);
     --outline: rgb(var(--color-access)) solid 1px;
     
+    --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
     --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
     
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
