multi toggle module conversion

--- a/src/components/ui/UI.module.scss
+++ b/src/components/ui/UI.module.scss
@@ -1,7 +1,8 @@
 .outline {
   outline-offset: var(--spacing-sm);
 
-  &:focus-visible {
+  &:focus-visible,
+  &:has(:focus-visible) {
     outline: var(--outline);
   }
 }
