--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -72,7 +72,7 @@
     --radius-lg: 12px;
 
     --border: 0.5px solid rgb(var(--color-front) / 0.1);
-    --outline: rgb(var(--color-access)) solid 1px;
+    --outline: var(--color-front-alt-75) solid 2px;
 
     --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
     --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
