--- a/src/styles/CmdK.scss
+++ b/src/styles/CmdK.scss
@@ -44,7 +44,7 @@
 [cmdk-group-heading] {
   padding: 8px 0;
   margin: 0 0 8px 0;
-  font-size: small;
+  font-size: 12px;
   line-height: 100%;
   padding: 0.25rem;
 }
@@ -53,13 +53,13 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  font-size: large;
+  // font-size: large;
 }
 
 [cmdk-item] {
   cursor: pointer;
   padding: 12px;
-  border-radius: theme('borderRadius.lg');
+  border-radius: var(--radius-lg);
 
   display: flex;
   align-items: center;
@@ -68,13 +68,13 @@
   will-change: background, color;
 
   &[data-selected='true'] {
-    background: rgb(var(--color-back-alt) / 0.5);
+    background: var(--color-back-alt-50);
     color: rgb(var(--color-front));
 
     [cmdk-framer-item-subtitle] {}
   }
 
-  &[data-disabled='true'] {}
+  &[data-disabled=true] {}
 
   &+[cmdk-item] {}
 
@@ -87,9 +87,7 @@
   }
 }
 
-[cmdk-item-label] {
-
-}
+[cmdk-item-label] {}
 
 [cmdk-item-state-display] {
   padding: 4px;
