updated app menu
updated app menu to use favicon component
- added button variant
- added radix component icon

--- a/src/components/ui/Button.module.scss
+++ b/src/components/ui/Button.module.scss
@@ -14,7 +14,7 @@
     box-shadow: var(--shadow-md);
     padding: var(--spacing-md);
     line-height: 1;
-    
+
     transition: all 100ms;
 
     [data-prefix],
@@ -63,5 +63,11 @@
       transform: translateY(1px);
       background: var(--color-back-alt-50);
     }
+  }
+
+  &[data-variant=none] {
+    border: none;
+    border-radius: 0;
+    padding: 0;
   }
 }
