--- a/src/components/ui/Menu.module.scss
+++ b/src/components/ui/Menu.module.scss
@@ -19,7 +19,7 @@
     padding: var(--portal-padding);
     width: 16em;
     background: var(--color-back-100);
-    border: var(--border-alt);
+    border: var(--border);
     border-radius: var(--portal-radius);
     color: var(--color-front-100);
   }
