--- a/src/components/ui/Key.module.scss
+++ b/src/components/ui/Key.module.scss
@@ -10,7 +10,7 @@
   transition: all 25ms cubic-bezier(0.4, 0, 0.2, 1);
   user-select: none;
 
-  border-bottom: 2px solid rgb(0 0 0 / 0.2);
+  border-bottom: 2px solid rgba(75, 75, 75, 0.2);
   transform: translateY(0);
 
   &[data-expand=true] {
