--- a/src/components/ui/Slider.module.scss
+++ b/src/components/ui/Slider.module.scss
@@ -23,8 +23,9 @@
     position: absolute;
     box-sizing: content-box;
     width: 4em;
-    box-shadow: inset 0 0 var(--spacing-md) rgb(0 0 0 / 0.1);
-    background: var(--color-back-alt-10);
+    // box-shadow: inset 0 0 var(--spacing-md) rgb(0 0 0 / 0.1);
+    background: var(--color-back-alt-50);
+    // backdrop-filter: blur;
     padding: var(--spacing-md);
     border: var(--border);
     border-radius: var(--radius-md);
