--- a/src/components/ui/Slider.module.scss
+++ b/src/components/ui/Slider.module.scss
@@ -1,7 +1,7 @@
 .base {
+  // overflow-x: clip;
   position: relative;
   isolation: isolate;
-  overflow-x: clip;
   width: 100%;
   display: flex;
   align-items: center;
