--- a/src/components/modes/Endless.module.scss
+++ b/src/components/modes/Endless.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: var(--spacing-lg);
+  gap: var(--spacing-xl);
 
   [data-en] {
     color: var(--color-front-alt-100);
