--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,6 +74,7 @@
     --spacing-sm: 3px;
     --spacing-md: 6px;
     --spacing-lg: 12px;
+    --spacing-xl: 18px;
     --spacing-v: var(--spacing);
 
 
