--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,6 +90,7 @@
     --shadow-inset: inset 0 2px 3px 0 rgb(0 0 0 / 0.05);
     --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
     --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    --shadow-lg: 0 6px 10px -2px rgb(0 0 0 / 0.05), 0 3px 8px -3px rgb(0 0 0 / 0.05);
 
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
 
